# haskell-musings

./: ADT.hs  Foldable.hs  Reader.hs  RecursionTest.hs  anonymous.hs  arith4.hs  binarytree.hs  caseExpressions.hs  ch10ex.hs  ch11ex.hs  ch12adversity.hs  cipher.hs  dataconstructors.hs  dayofweek.hs  dbprocess.hs  functionwithlet.hs  guards.hs  hofs.hs  letandwhere.hs  list.hs  matchTypes.hs  monomorphism.hs  palindrome.hs  penguins.hs  person.hs  phone.hs  print3.hs  projects.cabal  recursion.hs  registeredUser2.hs  reverse.hs  sing.hs  stack.yaml  stringExercise.hs  test.hs  toporlocal.hs
Addition/: Addition.hs  addition.cabal
applicatives/: applicatives.hs  exercises.hs
bitemyapp/: shawty.cabal
functors/: ReplaceExperiment.hs  constant.hs  functorExercises.hs  functors1.hs  functorwithinfunctors.hs  liftExercies.hs
hangman/: hangman.cabal
haskell-at-work/: Database.hs  Demo.hs  PrettyPrint.hs  Project.hs  Reporting.hs
monads/: BadMonads.hs  EitherMonad.hs  EndExercises.hs  exercises.hs  monads.cabal
monads-exercise/: .gitignore  ChangeLog.md  README.md  package.yaml
monoids-ch15/: MadLibbing.hs  monoidEx1.hs  monoidEx2.hs  monoidsEx3.hs
morse-code/: .gitignore  package.yaml  stack
orphan-instance/: Listy.hs  ListyInstances.hs
parsers/: parser-combinator.cabal
reader/: ApplicativeFunction.hs  Reader.hs  ReaderPractice.hs
slides/: adts.hs  compose.hs  impossiblestates.hs  simple.hs
state/: RandomDice.hs  RandomExample2.hs  (+1 more)
words/: Apl1.hs  BadMonoid.hs  Foldable.hs  List.hs  MWord.hs  Recursion.hs  RecursionTest.hs  Validation.hs  words.cabal
(+38 files in other folders)
