name:                words
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Varenya
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Recursion
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,hspec,QuickCheck
